<resources>
	<string name="splash_continue">Tap to Continue</string>
    <string name="app_name">Task Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_splash_continue">Continue</string>
    <string name="title_activity_main">Task Manager</string>
    <string name="button_main_create_task">Create A Task</string>
    <string name="button_main_update_data">Update Data</string>
    <string name="button_main_updating_data">Updating...</string>
    <string name="button_main_sort_by">Sort By...</string>
    <string name="unique">Unique Device ID: </string>
    <string name="button_main_search_menu_cancel">Cancel</string>
    <string name="button_main_search_menu_keyword">Search By Keyword</string>
    <string name="button_main_search_menu_id">Search By ID</string>
    <string name="button_main_sort_menu_cancel">Cancel</string>
    <string name="button_main_sort_menu_date">Sort By Date</string>
    <string name="button_main_sort_menu_random">Sort Randomly</string>
    <string name="button_main_sort_menu_alphabetic">Sort Alphabetically</string>
    <string name="button_main_search_by">Search By...</string>
    <string name="button_create_save">Save</string>
    <string name="button_create_cancel">Cancel</string>
    <string name="text_create_taskname">Task Name: </string>
    <string name="text_create_taskdesc">Description: </string>
    <string name="text_create_namehint">Your task name here</string>
    <string name="text_create_deschint">Your description here</string>
    <string name="text_create_scope">Task Scope</string>
    <string name="text_create_public">Public</string>
    <string name="text_create_private">Private</string>
    <string name="text_create_photo">Photo</string>
    <string name="text_create_audio">Audio</string>
    <string name="text_create_text">Text</string>
    <string name="text_create_responses">Desired Responses: </string>
    <string name="text_edit_openclose">Open/Closed: </string>
    <string name="text_edit_open">Open: </string>
    <string name="text_edit_close">Close: </string>
    <string name="text_fulfill_name">Task Name: {Some Name} </string>
    <string name="text_fulfill_desc">Description: {Some Description} </string>
    <string name="text_fulfill_desired">Desired Responses: {photo,audio,text}</string>
    <string name="text_fulfill_scope">Task Scope: {public/private}</string>
    <string name="text_fulfill_email">Email: {email}</string>
    <string name="text_fulfill_text">Text Response:</string>
    <string name="text_fulfill_texthint">Your Text Response</string>
    <string name="text_view_openclose">Availability: {Open/Closed}</string>
    <string name="text_viewresponse_textresponse">Text Response: {some text}</string>
    <string name="text_viewresponse_attach">Attachments: </string>
  	<string name="text_photo_take">Take New Photo</string>
    <string name="menu_fulfill">Fulfill Task</string>    
    <string name="menu_public">Make Task Public</string>    
    <string name="menu_edit">Edit Task</string>    
    <string name="menu_view">View Task</string>    
    <string name="menu_close">Close Task</string>    
    <string name="menu_viewresponse">View Response</string>    
    <string name="photo_done">Done Taking Photos</string>
    <string name="menu_delete">Delete Response</string>    
    <string name="email_hint">Your email here</string>
    <string name="text_email">Email Address (Optional):</string>
    
    
    
    <string name="button_edit_cancel">Cancel</string>
    <string name="button_edit_save">Save Changes</string>
    <string name="button_edit_delete">Delete Task</string>
    <string name="button_fulfill_photo">Take Picture(s)</string>
    <string name="button_fulfill_audio">Record Audio</string>
    <string name="button_fulfill_photoMem">My Photos</string>
    <string name="button_fulfill_audioMem">My Sounds</string>
    <string name="button_fulfill_save">Save</string>
    <string name="button_fulfill_cancel">Cancel</string>
    <string name="button_photo_retake">Retake Photo</string>
    <string name="button_photo_use">Use Photo</string>
    
    <string name="button_photo_cancel">Cancel</string>
    <string name="button_audio_record">Record Audio</string>
    <string name="button_audio_use">Use Audio</string>
    <string name="button_audio_done">Done Recording Audio</string>
    <string name="button_memory_cancel">Cancel</string>
    <string name="button_view_fulfill">Fulfill Task</string>
    <string name="button_view_cancel">Main Menu</string>
    <string name="button_viewRes_cancel">Done</string>
    <string name="title_activity_main_screen">Task Manager</string>
    <string name="title_activity_create_task">Create A New Task</string>
    <string name="title_activity_edit_task">Edit A Task</string>
    <string name="title_activity_fulfill_task">Fulfill A Task</string>
    <string name="title_activity_photo_taker">Take A Photo</string>
    <string name="title_activity_audio_recorder">Record Some Audio</string>
    <string name="title_activity_memory_check">MemoryCheck</string>
    <string name="title_activity_view_task">View A Task</string>
    <string name="title_activity_view_response">View A Task Response</string>

</resources>