<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/button_fulfill_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_fulfill_photo"
        android:onClick="takePhoto" />
    
    <Button
        android:id="@+id/button_fulfill_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_fulfill_audio"
        android:onClick="recordAudio" />
    
    <Button
        android:id="@+id/button_fulfill_photoMem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_fulfill_photoMem"
        android:onClick="findPhoto" />
    
    <Button
        android:id="@+id/button_fulfill_audioMem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_fulfill_audioMem"
        android:onClick="findAudio" />
    
    <Button
        android:id="@+id/button_fulfill_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_fulfill_cancel"
        android:onClick="cancelFulfill" />
    
    <Button
        android:id="@+id/button_fulfill_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_fulfill_save"
        android:onClick="saveFulfill" />

</LinearLayout>
