<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 
     <Button
        android:id="@+id/searchDialogButtonID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_main_search_menu_id"
        />
     
     <Button
        android:id="@+id/searchDialogButtonKeyword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_main_search_menu_keyword"
        android:layout_below="@id/searchDialogButtonID"
        />
     
     <Button
        android:id="@+id/searchDialogButtonCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_main_search_menu_cancel"
        android:layout_below="@id/searchDialogButtonKeyword"
        />
 
</RelativeLayout>