<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_edit_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_edit_cancel"
        android:onClick="cancelEdit" />
    
    <Button
        android:id="@+id/button_edit_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_edit_delete"
        android:onClick="deleteTask" />
    
    <Button
        android:id="@+id/button_edit_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_edit_save"
        android:onClick="saveEdit" />

</LinearLayout>
